# Pokefetch

./: .gitignore  README.md  analyze_colors.py  pokefetch.py  pokefetch_legacy.py  pokemon_wordlist.txt  prime_cache.py  pyproject.toml  template.txt
tests/: test_pokebase_contract.py
